--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <div id="mobile-menu" class="fixed inset-0 bg-black/95 backdrop-blur-xl z-40 hidden">
         <div class="flex flex-col items-center justify-center h-full space-y-8">
             <a href="#projects" class="text-2xl text-white/70 hover:text-cyan-400 transition-colors">PROJECTS</a>
+            <a href="#certifications" class="text-2xl text-white/70 hover:text-cyan-400 transition-colors">CERTIFICATIONS</a>
             <a href="#skills" class="text-2xl text-white/70 hover:text-purple-400 transition-colors">SKILLS</a>
             <a href="#about" class="text-2xl text-white/70 hover:text-pink-400 transition-colors">ABOUT</a>
             <a href="#contact" class="text-2xl text-white/70 hover:text-emerald-400 transition-colors">CONTACT</a>
