--- a/index_hybrid.html
+++ b/index_hybrid.html
@@ -216,7 +216,11 @@
                     <div class="order-1 lg:order-2">
                         <div class="relative">
                             <div class="absolute inset-0 bg-gradient-to-r from-emerald-500/20 to-teal-500/20 rounded-lg transform rotate-3"></div>
-                            <img src="images/smartapi.png" alt="Smart API Trading" class="relative rounded-lg border border-white/10 w-full">
+                            <img src="images/smartapi.png" alt="Smart API Trading" class="lightbox-trigger relative rounded-lg border border-white/10 w-full cursor-pointer hover:border-emerald-400/50 hover:scale-[1.02] transition-all duration-300"
+                            data-images='["images/smartapi.png"]'>
+                            <div class="absolute bottom-4 right-4 bg-black/50 p-2 rounded-full pointer-events-none">
+                                <svg class="w-4 h-4 text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 8V4m0 0h4M4 4l5 5m11-1V4m0 0h-4m4 0l-5 5M4 16v4m0 0h4m-4 0l5-5m11 5l-5-5m5 5v-4m0 4h-4"/></svg>
+                            </div>
                         </div>
                     </div>
                 </div>
