--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div class="text-sm font-bold text-cyan-400">DG</div>
             <div class="hidden md:flex space-x-6">
                 <a href="#projects" class="text-xs text-white/70 hover:text-cyan-400 transition-all duration-300 hover:scale-110">PROJECTS</a>
+                <a href="#certifications" class="text-2xl text-white/70 hover:text-cyan-400 transition-colors">CERTIFICATIONS</a>
                 <a href="#skills" class="text-xs text-white/70 hover:text-purple-400 transition-all duration-300 hover:scale-110">SKILLS</a>
                 <a href="#about" class="text-xs text-white/70 hover:text-pink-400 transition-all duration-300 hover:scale-110">ABOUT</a>
                 <a href="#contact" class="text-xs text-white/70 hover:text-emerald-400 transition-all duration-300 hover:scale-110">CONTACT</a>
