--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
                 <span class="relative z-10">DISCOVER_MORE</span>
                 <div class="absolute inset-0 bg-gradient-to-r from-purple-500 to-pink-500 opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
             </a>
+            <a href="/docs/Drishan_Gupta_Resume.pdf" class="group relative bg-gradient-to-r from-cyan-500 to-purple-500 text-black font-bold px-8 py-4 rounded-none hover:shadow-2xl hover:shadow-cyan-500/50 transition-all duration-300 transform hover:scale-105 cyber-button inline-block">
+                <span class="relative z-10">Resume</span>
+                <div class="absolute inset-0 bg-gradient-to-r from-purple-500 to-pink-500 opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
+            </a>
         </div>
         
         <!-- Floating Elements -->
